go-sa-postgres/deployment-gcp-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-gcp-postgres
  namespace: default
spec:
  replicas: 2
  revisionHistoryLimit: 3  # Keeps only the 3 most recent old versions
  selector:
    matchLabels:
      app: go-backend
  template:
    metadata:
      labels:
        app: go-backend
    spec:
      containers:
      - name: go-app
        image: anuroop21/go-sa-postgres:0.1.96
        ports:
        - containerPort: 8080
      - name: cloud-sql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.0
        args:
          - "aks-integration-lab:asia-south1:go-backend-db"
          - "--port=5432"
          - "--credentials-file=/secrets/credentials.json"
        volumeMounts:
        - name: gcp-sa-key-volume
          mountPath: /secrets
          readOnly: true

      volumes:
      - name: gcp-sa-key-volume
        secret:
          secretName: gcp-sa-key
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-gcp-postgres
spec:
  type: ClusterIP
  selector:
    app: go-app
  ports:
  - port: 80
    targetPort: 8080
