go-sa-postgres/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: default
spec:
  replicas: 2
  revisionHistoryLimit: 3  # Keeps only the 3 most recent old versions
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: anuroop21/go-sa-postgres:0.1.99
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  type: ClusterIP
  selector:
    app: go-app
  ports:
  - port: 80
    targetPort: 8080
