go-sa-postgres/gcp-postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  annotations:
    # Use the "nginx" class installed by Helm
    kubernetes.io/ingress.class: nginx
    # Optional: Force SSL redirection
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-app-gcp-postgres # Must match your Service name
            port:
              number: 80
